--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-fast-marquee": "^1.3.5",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
